logs/peepdf.log
Listing '.'...
Listing './bin'...
Compiling './bin/createfontdatachunk.py'...
Compiling './bin/enhancer.py'...
Compiling './bin/explode.py'...
Compiling './bin/gifmaker.py'...
Compiling './bin/painter.py'...
Compiling './bin/pilconvert.py'...
Compiling './bin/pildriver.py'...
Compiling './bin/pilfile.py'...
Compiling './bin/pilfont.py'...
Compiling './bin/pilprint.py'...
Compiling './bin/player.py'...
Compiling './bin/thresholder.py'...
Compiling './bin/viewer.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/Pillow-3.2.0.egg-info'...
Listing './lib/python3.5/site-packages/aespython'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.7.dist-info'...
Listing './lib/python3.5/site-packages/jsbeautifier'...
Listing './lib/python3.5/site-packages/jsbeautifier/tests'...
Listing './lib/python3.5/site-packages/jsbeautifier/tests/generated'...
Listing './lib/python3.5/site-packages/jsbeautifier/unpackers'...
Listing './lib/python3.5/site-packages/jsbeautifier/unpackers/tests'...
Listing './lib/python3.5/site-packages/jsbeautifier-1.6.2.egg-info'...
Listing './lib/python3.5/site-packages/peepdf'...
Compiling './lib/python3.5/site-packages/peepdf/JSAnalysis.py'...
***   File "./lib/python3.5/site-packages/peepdf/JSAnalysis.py", line 261
    if escapedBytes.lower().find('%u') != -1 or escapedBytes.lower().find('\u') != -1 or escapedBytes.find('%') != -1:
                                                                         ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 0-1: truncated \uXXXX escape

Compiling './lib/python3.5/site-packages/peepdf/PDFConsole.py'...
***   File "./lib/python3.5/site-packages/peepdf/PDFConsole.py", line 155
    print newLine + 'Leaving the Peepdf interactive console...Bye! ;)' + newLine
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/peepdf/PDFOutput.py'...
***   File "./lib/python3.5/site-packages/peepdf/PDFOutput.py", line 129
    print self.errorColor + errorMessage + self.resetColor + self.newLine
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/peepdf/ccitt.py'...
***   File "./lib/python3.5/site-packages/peepdf/ccitt.py", line 39
    raise BitWriterException, "Invalid data length"
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/peepdf/main.py'...
***   File "./lib/python3.5/site-packages/peepdf/main.py", line 394
    print peepdfHeader
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/peepdf-0.3.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pythonaes-1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
